--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pandas>=2.0.0",
     "pyarrow>=14.0.0",
     "python-dotenv>=1.0.0",
+    "yfinance>=0.2.66",
 ]
 
 [project.optional-dependencies]
