--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,11 @@ dependencies = [
     "pyarrow>=14.0.0",
     "python-dotenv>=1.0.0",
     "yfinance>=0.2.66",
+    "feedparser>=6.0.0",
+    "textblob>=0.17.0",
+    "nltk>=3.8.0",
+    "matplotlib>=3.8.0",
+    "seaborn>=0.13.0",
 ]
 
 [project.optional-dependencies]
