--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "nltk>=3.8.0",
     "matplotlib>=3.8.0",
     "seaborn>=0.13.0",
+    "dask[distributed]>=2025.11.0",
 ]
 
 [project.optional-dependencies]
